[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/turt-bug-1.png" type="Texture" id=1]
[ext_resource path="res://img/turt-bug-2.png" type="Texture" id=2]
[ext_resource path="res://img/turt-bug-0.png" type="Texture" id=3]
[ext_resource path="res://src/Mob.gd" type="Script" id=4]
[ext_resource path="res://audio/eatingsfxwav-14588.mp3" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 63.1981

[node name="MobRigidBody2D" type="RigidBody2D"]
mass = 0.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 4 )

[node name="MobAnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="MobCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.4, 0.2 )
shape = SubResource( 2 )

[node name="MobVisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="EatStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_MobRigidBody2D_body_entered"]
[connection signal="hit" from="." to="." method="_on_MobRigidBody2D_hit"]
[connection signal="screen_exited" from="MobVisibilityNotifier2D" to="." method="_on_MobVisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
